--- a/MyDiary/app/src/main/res/layout/activity_add_diary.xml
+++ b/MyDiary/app/src/main/res/layout/activity_add_diary.xml
@@ -3,9 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
-            android:background="#FDC439"
-    >
+              android:orientation="vertical">
 
     <include
         layout="@layout/part_common_title"
@@ -14,20 +12,19 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:paddingLeft="20dp"
-        android:background="@drawable/card_background"
+        android:background="#fff"
         >
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
             android:gravity="center_vertical"
             android:text="Add Diary"
-            android:textColor="#FDC439"
+            android:textColor="#000"
             android:textSize="35dp"
             android:textStyle="bold" />
 
@@ -35,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="20dp"
             android:orientation="vertical"
             >
