--- a/MyDiary/app/src/main/res/layout/activity_update_diary.xml
+++ b/MyDiary/app/src/main/res/layout/activity_update_diary.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-    android:background="#FDC439"
+    android:background="#fff"
     >
 
     <include
@@ -17,24 +17,33 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:paddingLeft="20dp"
-        android:background="@drawable/card_background"
         >
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:text="Update a Diary"
+            android:textColor="#000"
+            android:textSize="35dp"
+            android:textStyle="bold" />
+
 
         <TextView
             android:id="@+id/update_diary_tv_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
             android:gravity="center_vertical"
+            android:layout_marginTop="50dp"
             android:text="Update a Diary"
             android:textColor="#FDC439"
-            android:textSize="35dp"
-            android:textStyle="bold"
-            />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,7 +51,7 @@
             android:orientation="vertical"
             android:paddingRight="20dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="80dp"
             android:layout_marginRight="20dp"
             >
 
