--- a/MyDiary/app/src/main/res/layout/activity_main.xml
+++ b/MyDiary/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,31 @@
             android:layout_height="220dp"
             android:scaleType="fitXY"
             android:background="@drawable/home_back"/>
-    <TextView
-        android:id="@+id/welcome1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:text="Hello!"
-        android:textColor="#000"
-        android:textSize="30dp"
-        android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/welcome1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:text="Hello!"
+                android:textColor="#000"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="20dp"
+                android:text="Date"
+                />
+        </LinearLayout>
 
     <TextView
         android:id="@+id/welcome2"
@@ -141,11 +156,11 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"></CalendarView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview"
-        android:layout_above="@+id/calendar"></TextView>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/textview"-->
+<!--        android:layout_above="@+id/calendar"></TextView>-->
 
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
